bug fix images, firestore post condition

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <noscript
       ><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
     /></noscript>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>Snake game</title>
   </head>
   <body>
